opam-version: "2.0"
name: "andes"
license: "MIT"
version: "dev"
author: "Simon Cruanes"
synopsis: "Logic engine for recursion and datatypes"
maintainer: ["simon.cruanes.2007@m4x.org"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"
  "containers" { >= "3.0" }
  "iter" { >= "1.0" }
  "catapult"
  "catapult-file"
  "ocaml" { >= "4.08" }
]
depopts: [
  "tip-parser" { >= "0.6" }
]
tags: [ "prolog" "datalog" "logic" "tabling" ]
homepage: "https://github.com/c-cube/andes"
dev-repo: "git+https://github.com/c-cube/andes.git"
bug-reports: "https://github.com/c-cube/andes/issues/"

